--- a/wrapper/wrapper.conf
+++ b/wrapper/wrapper.conf
@@ -1,3 +1,13 @@
 internal 10.200.240.0/24
-external 0.0.0.0
+
+# Define user credentials
+users user:CL:FKEjf982he98fih
+
+auth strong
+allow user
+proxy -p5737 -n
+flush
+
+auth strong
+allow user
 socks -p5736
