--- a/wrapper/wrapper.conf
+++ b/wrapper/wrapper.conf
@@ -1,13 +1,4 @@
 internal 10.200.240.0/24
-
-# Define user credentials
-users user:CL:FKEjf982he98fih
-
-auth strong
-allow user
-proxy -p5737 -n
-flush
-
-auth strong
-allow user
+external 0.0.0.0
 socks -p5736
+proxy -p5737 -n
